--- a/package.json
+++ b/package.json
@@ -42,12 +42,14 @@
     "@tanstack/react-query-persist-client": "^5.90.14",
     "@vercel/analytics": "latest",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "csv-parser": "^3.2.0",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
+    "idb": "^7.1.1",
     "immer": "latest",
     "input-otp": "1.4.1",
     "leaflet": "^1.9.4",
@@ -63,7 +65,6 @@
     "react-leaflet": "^5.0.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.4",
-    "idb": "^7.1.1",
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
